Edit custom button component

--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -13,6 +13,7 @@
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  transition: all 0.2s ease;
 
   &:hover {
     background-color: white;
