Edit google authentication

--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -14,10 +14,21 @@
   border: none;
   cursor: pointer;
   transition: all 0.2s ease;
+  margin:10px;
 
   &:hover {
     background-color: white;
     color: black;
     border: 1px solid black;
+  }
+
+  &.google-sign-in{
+    background-color:#4285f4;
+    color: white;
+
+    &:hover {
+      background-color:#357ae8;
+      border: none;
+    }
   }
 }
