--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   height: 350px;
   align-items: center;
-
+  position: relative;
 
   .image {
     width: 100%;
@@ -12,6 +12,26 @@
     background-size: cover;
     background-position: center;
     margin-bottom: 5px;
+  }
+
+  .custom-button {
+    width: 80%;
+    opacity: 0.7;
+    position: absolute;
+    top: 255px;
+    margin: 0 auto;
+    display: none;
+  }
+
+  &:hover {
+    .image {
+      opacity: 0.8;
+    }
+
+    .custom-button {
+      opacity: 0.85;
+      display: flex;
+    }
   }
 
   .collection-footer {
@@ -24,7 +44,6 @@
     .name {
       width: 90%;
       margin-bottom: 15px;
-      font-style: oblique;
     }
 
     .price {
